--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,5 +6,81 @@
 
 
 *{
- font-family: 'Avenir', sans-serif;
+ font-family: 'Avenir',  sans-serif;
+}
+
+
+
+
+.scrollable::-webkit-scrollbar {
+  width: 4px;
+  height: 4px;
+}
+
+/* Track */
+.scrollable::-webkit-scrollbar-track {
+  border-radius: 100vh;
+  padding: 20px 20px ;
+  background: transparent;
+}
+
+/* Handle */
+.scrollable::-webkit-scrollbar-thumb {
+  /* background: rgb(242, 242, 242); */
+  /* background: #efedf6; */
+  background: #e6e6e6;
+  border-radius: 100px;
+}
+
+/* Handle on hover */
+.scrollable::-webkit-scrollbar-thumb:hover {
+  background: #656565;
+}
+
+
+
+.img {
+  background: #7e7e7e40;
+}
+
+
+/* width */
+.overflowable::-webkit-scrollbar {
+width: 4px;
+}
+
+/* Track */
+.overflowable::-webkit-scrollbar-track {
+box-shadow: inset 0 0 5px white;
+border-radius: 10px;
+}
+
+/* Handle */
+.overflowable::-webkit-scrollbar-thumb {
+    width: 6px;
+height: 6px;
+border-radius: 10px;
+}
+
+#file-upload-button {
+background-color: aliceblue;
+}
+
+
+
+
+.logs-panel-td:fullscreen{
+  max-height: 30px;
+}
+#logs-panel:fullscreen {
+  overflow: scroll !important;
+}
+#logs-panel:-ms-fullscreen {
+  overflow: scroll !important;
+}
+#logs-panel:-webkit-full-screen {
+  overflow: scroll !important;
+}
+#logs-panel:-moz-full-screen {
+  overflow: scroll !important;
 }
