--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,9 +35,30 @@
 .scrollable::-webkit-scrollbar-thumb:hover {
   background: #656565;
 }
+#para::before{
+  content: "";
+  background-color: black;
+  height: 3px;
+  width: 0%;
+  position: absolute;
+  border-radius: 19%;
+  bottom: -1px;
+  transition: 0.5s ease-in-out;
+}
 
 
+#notification{
+  transition: 0.5s ease-in-out;
+}
 
+#notification:hover{
+  position: absolute;
+  height: 100%;
+  background-color: #656565;
+}
+#para:hover::before{
+  width: 100%;
+}
 .img {
   background: #7e7e7e40;
 }
