--- a/styles/globals.css
+++ b/styles/globals.css
@@ -57,7 +57,7 @@
 .header {
   z-index: 100;
 }
-#para::before {
+/* #para::before {
   content: "";
   background-color: black;
   height: 3px;
@@ -66,17 +66,17 @@
   border-radius: 19%;
   bottom: -1px;
   transition: 0.5s ease-in-out;
-}
+} */
 
 #notification {
   transition: 0.5s ease-in-out;
 }
 
-#notification:hover {
+/* #notification:hover {
   position: absolute;
   height: 100%;
   background-color: #656565;
-}
+} */
 #para:hover::before {
   width: 100%;
 }
